# cobre-bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: cobre-evaporation-bug.md  cobre-load-mw-semantics.md  cobre-spillage-cost-extraction-bug.md  cobre-water-balance-bug.md
plans/compare-refactor/: .implementation-state.json  README.md
plans/hydro-conversion-improvements/: .implementation-state.json  00-master-plan.md  README.md
plans/hydro-conversion-improvements/epic-01-productivity-and-derating/: 00-epic-overview.md  ticket-001-implement-average-productivity.md  ticket-002-apply-teif-ip-derating.md  ticket-003-add-hydraulic-losses-field.md
plans/hydro-conversion-improvements/epic-02-modif-and-ghmin/: 00-epic-overview.md  ticket-006-parse-ghmin.md  (+2 more)
scripts/: analyze_results.py  dashboard.py
src/cobre_bridge/: __init__.py  cli.py  dashboard.py  id_map.py  newave_files.py  pipeline.py
tests/: test_chart_helpers.py  test_cli.py  test_compare.py  test_constraints.py  test_costs.py  test_dashboard.py  test_energy_balance.py  test_entity_conversion.py  test_network.py  test_overview.py  test_package.py  test_performance.py  test_plants.py  test_stochastic.py  test_tab_constraints.py  test_tab_ordering.py  test_temporal_stochastic_conversion.py  test_training.py  test_ui.py  test_ui_updates.py  test_v2_constraints.py  test_v2_costs.py  test_v2_energy_balance.py  test_v2_network.py  test_v2_overview.py  test_v2_performance.py  test_v2_plants.py  test_v2_stochastic.py  test_v2_training.py
(+58 files in other folders)
