[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobre-bridge"
version = "0.1.0"
description = "NEWAVE-to-Cobre converter"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "inewave>=1.12.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]
validation = [
    "cobre>=0.1.4",
]

[project.scripts]
cobre-bridge = "cobre_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cobre_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
