[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobre-bridge"
version = "0.1.0"
description = "Anything-to-Cobre converter"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "inewave>=1.13.1",
    "pyarrow>=23.0.1",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.24",
    "pytest-cov",
    "ruff",
]
validation = [
    "cobre-python>=0.1.6",
]

[project.scripts]
cobre-bridge = "cobre_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cobre_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
